--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   google_sign_in: ^7.2.0
   contained_tab_bar_view: ^0.8.0
   country_picker: ^2.0.27
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
